# KANAK_ENGINE

./: .gitignore  Asset_Manager.bat  CMakeLists.txt  CMakePresets.json  MaskUtils..hpp  README.md  RoomAsset.cpp  RoomAsset.h  RoomGenerator.cc  RoomGenerator.h  Run_Game.bat  all_tags.csv  crop.py  install.bat  main.spec  receipt_converter.py  run.bat  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Asset Manager/: asset_manager_main.py  main.py  map_manager_main.py  project_structure.txt  requirements.txt  setup.py  triggers.csv
Asset Manager/pages/: AnimationConfig.py  Animations.py  animation_uploader.py  area_ui.py  assets_editor.py  base.py  basic_info.py  batch_asset_editor.py  boundary.py  boundary_page.py  child.py  draw_mode_panel.py  key_color.py  lighting.py  lighting_controls.py  map.py  map_assets_page.py  map_info_page.py  map_layer_info.py  map_light_page.py  map_render.py  mask_mode_panel.py  on_attack.py  on_collision.py  on_interaction.py  overlay.py  passa.py  range.py  room_info.py  rooms_page.py  search.py  shading.py  size.py  spacing.py  tags.py  trails_page.py
ENGINE/: AnimationSet.cpp  AnimationSet.hpp  Area.cpp  Area.hpp  Asset.cpp  Asset.hpp  AssetInfo.cpp  AssetInfo.hpp  AssetManager.cpp  AssetManager.hpp  Assets.cpp  Assets.hpp  Boundary.cpp  Boundary.hpp  RoomAsset.cpp  RoomAsset.hpp  RoomGenerator.cc  active_assets_manager.cpp  active_assets_manager.hpp  animation.cpp  animation.hpp  asset_spawner.cpp  asset_spawner.hpp  check.cpp  check.hpp  controls_manager.cpp  controls_manager.hpp  debug_area.cpp  debug_area.hpp  engine.cpp  engine.hpp  generate_light.cpp  generate_light.hpp  generate_map_light.cpp  generate_map_light.hpp  generate_rooms.cpp  generate_rooms.hpp  global_light_source.cpp  global_light_source.hpp  gradient.cpp  (+23 more)
Kanak_Manager/: map_manager_main.py
Kanak_Manager/pages/: AnimationConfig.py  Animations.py  basic_info.py  rooms_page.py
MAPS/Burried_Money/: map_info.json  map_light.json
MAPS/FORREST/: boundaries.json  map_assets.json  map_boundary.json  map_info.json  map_light.json  spawn_log.csv
MAPS/Map_1/: map_info.json
MAPS/test/: map_info.json
SCHEMA's/: ATTRIBUTES_json_schema.txt
SRC/: Map.json  all_tags.csv  crop.py  info.json  ok.py  tag_map.csv
SRC/Axe/: info.json  spacing_area.json
SRC/Barrel/: attack_area.json  child_0_area.json  child_1_area.json  child_area_1.json  child_area_2.json  child_area_3.json  child_area_4.json  child_area_5.json  child_area_6.json  child_area_7.json  child_area_8.json  child_assets_1.json  collision_area.json  impassable_area.json  info.json  interaction_area.json  spacing_area.json
SRC/Bench/: child_0_area.json  child_assets_1.json  impassable_area.json  info.json  spacing_area.json
engine/: asset_generator.cpp  asset_generator.hpp  asset_info.cpp  asset_info.hpp  asset_library.cpp  asset_library.hpp  asset_loader.cpp  asset_loader.hpp  asset_spawn_planner.cpp  asset_spawn_planner.hpp  create_directories.py  distance_transform.cpp  distance_transform.hpp  fade_textures.cpp  fade_textures.hpp  generate_base_shadow.cpp  generate_base_shadow.hpp  generate_room.cpp  generate_room.hpp  generate_trails.cpp  generate_trails.hpp  map.json  shadow_overlay.cpp  shadow_overlay.hpp  spawn_info.hpp
scripts/: add_effects.py
(+207 files in other folders)
